# arcsec-lib

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  intrinsics.h  vectors.h
benchmarks/: CMakeLists.txt  benchmarking.h  v4-add.cpp
include/: intrinsics.h  matrices.h  utils.h  vectors.h
include/matrices/: mat2.h  mat3.h  matrix.h  operators.h
include/ops/: mops.h  operation_selector.h  vops.h
include/ops/matrices/: generic_matrix_ops.h  matrix_generic.h  matrix_vectorised.h
include/ops/selectors/: neon.h  op_selector.h  x86.h
include/ops/vectors/: generic_ops.h  vector_generic.h  vector_vectorised.h
include/vectors/: operators.h  vector.h  vector2.h  vector3.h  vector4.h
include/vfn/: vcross.h  vdot.h  vmag.h  vnorm.h
ops/: operation_selector.h
ops/vectors/: vector_generic.h
tests/: CMakeLists.txt  base.cpp  mat-arithmetic.cpp  vec-arithmetic-lhs.cpp  vec-arithmetic.cpp  vec-cross.cpp  vec-dot.cpp  vec-mag.cpp  vec-norm.cpp
tests/tools/: tools.h
vectors/: vector2.h  vector3.h  vector4.h
